# aicup22

./: .gitignore  CMakeLists.txt  MyStrategy.cpp  MyStrategy.hpp  build_tag.sh  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  main.cpp
debugging/: Camera.cpp  DebugData.hpp
emulator/: ClosestPointIndex.cpp  ClosestPointIndex.h  Constants.cpp  Constants.h  DebugSingleton.cpp  DebugSingleton.h  Evaluation.cpp  Evaluation.h  LootPicker.cpp  LootPicker.h  Memory.cpp  Memory.h  Sound.cpp  Sound.h  Strategy.cpp  Strategy.h  Vector2D.cpp  Vector2D.h  World.cpp  World.h  public.h
model/: Obstacle.cpp  Obstacle.hpp  Unit.hpp  Zone.hpp
testbin/: main.cpp
testbin/emulator_test/: main.cpp
testbin/random_emulation/: main.cpp
